<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">LifeTracker</string>
    <string name="title_section1">Track</string>
    <string name="title_section2">Metrics</string>
    <string name="title_section3">History</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_example">Example action</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_track">TrackActivity</string>
    <string name="title_activity_metrics">MetricsActivity</string>
    <string name="title_activity_history">HistoryActivity</string>
    <string name="title_activity_metrics_new_fragment">MetricsNewFragment</string>
    <!-- Action Menu -->
    <string name="time_menu_week">Week</string>
    <string name="time_menu_month">Month</string>
    <string name="time_menu_all">All</string>
    <!-- Metrics -->
    <string name="metrics_main_button_new">New Metric</string>
    <string name="title_activity_metrics_details">MetricsDetailsActivity</string>
	<!-- Metrics New -->
    <string name="metrics_new_header">New Metric</string>
    <string name="metrics_new_label_name">Name:</string>
    <string name="metrics_new_input_name">metric name</string>
    <string name="metrics_new_label_desc">Description:</string>
    <string name="metrics_new_input_desc">metric details</string>
    <string name="metrics_new_label_unit">Unit:</string>
    <string name="metrics_new_input_unit">miles/hours/etc.</string>
    <string name="metrics_new_label_dflt">Default:</string>
    <string name="metrics_new_input_dflt">daily start value</string>
    <string name="metrics_new_radio_binary_yes">Yes</string>
    <string name="metrics_new_radio_binary_no">No</string>
    <string name="metrics_new_label_type">Type:</string>
    <string name="metrics_new_radio_binary">binary (yes/no)</string>
    <string name="metrics_new_radio_count">count (enter an amount)</string>
    <string name="metrics_new_radio_increment">increment (accumulate)</string>
    <string name="metrics_new_button_cancel">Cancel</string>
    <string name="metrics_new_button_save">Save</string>
    <!-- Metrics Details -->
    <string name="metrics_details_button_cancel">Cancel</string>
    <string name="metrics_details_button_edit">Edit</string>
    <string name="metrics_details_button_delete">Delete</string>
    <string name="metrics_details_button_editcancel">Cancel</string>
    <string name="metrics_details_button_save">Save</string>
    
    <!-- Tracking -->
    <string name="track_list_item_details">Add Details</string>
    <string name="track_list_binary_item_done">image</string>
    <string name="track_list_increment_item_less">less</string>
    <string name="track_list_increment_item_more">more</string>
    <string name="track_list_count_item_edit">edit</string>
    <string name="track_list_button_save">Save</string>
    <string name="track_list_date_down">Earlier</string>
    <string name="track_list_date_up">Later</string>
    
</resources>
