<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.ems.lifetracker.MainActivity$MetricsNewFragment" >

   	<ListView
        android:id="@+id/metrics_details_list"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
		android:layout_alignParentTop="true"
        />
	<LinearLayout 
	    android:layout_below="@+id/metrics_details_list"
		android:layout_above="@+id/metrics_details_layout_defaultbuttons"
		android:layout_height="wrap_content"
		android:layout_width="match_parent" 
		android:orientation="vertical"
	    >
	    <LinearLayout 
		    android:id="@+id/metrics_details_chart"
		    android:orientation="horizontal"
		    android:layout_height="0dp"
	        android:layout_width="match_parent" 
	        android:layout_weight=".5" 
	    	/>
		<ListView
		    android:id="@+id/metrics_details_events"
		    android:orientation="vertical"
	        android:layout_height="0dp"
	        android:layout_width="match_parent" 
	        android:layout_weight=".5" 
	    	/>
    </LinearLayout>
	<LinearLayout
        style="?android:attr/buttonBarStyle"
        android:id="@+id/metrics_details_layout_defaultbuttons"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="horizontal"
        android:weightSum="3" >
   	    <Button
   	        style="?android:attr/buttonBarButtonStyle"
	        android:id="@+id/metrics_details_button_cancel"
	        android:layout_width="0dp"
	        android:layout_height="wrap_content"
            android:layout_weight="1"
	        android:text="@string/metrics_details_button_cancel" />
       	<Button
	        style="?android:attr/buttonBarButtonStyle"
	        android:id="@+id/metrics_details_button_edit"
	        android:layout_width="0dp"
	        android:layout_height="wrap_content"
            android:layout_weight="1"
	        android:text="@string/metrics_details_button_edit" />
		<Button
	        style="?android:attr/buttonBarButtonStyle"
	        android:id="@+id/metrics_details_button_delete"
	        android:layout_width="0dp"
	        android:layout_height="wrap_content"
            android:layout_weight="1"
	        android:text="@string/metrics_details_button_delete" />
	</LinearLayout>
	<LinearLayout
        style="?android:attr/buttonBarStyle"
        android:id="@+id/metrics_details_layout_editbuttons"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="horizontal"
        android:visibility="gone"
        android:weightSum="2" >
   	    <Button
   	        style="?android:attr/buttonBarButtonStyle"
	        android:id="@+id/metrics_details_button_editcancel"
	        android:layout_width="0dp"
	        android:layout_height="wrap_content"
            android:layout_weight="1"
	        android:text="@string/metrics_details_button_editcancel" />
       	<Button
	        style="?android:attr/buttonBarButtonStyle"
	        android:id="@+id/metrics_details_button_save"
	        android:layout_width="0dp"
	        android:layout_height="wrap_content"
            android:layout_weight="1"
	        android:text="@string/metrics_details_button_save" />
	</LinearLayout>
</RelativeLayout>